--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -73,9 +73,6 @@ h4 {
 .p-heading {
   font-size: 2.2rem;
 }
-.status {
-  text-align: center;
-}
 .button {
   border-radius: 50px;
   display: block;
@@ -904,13 +901,35 @@ h4 {
   margin-bottom: 4rem;
   margin-top: 2rem;
 }
+
 .often-questions .accordion-heading span {
   border-bottom: 2px dotted #333;
 }
+
+.often-questions p.active-style span {
+  color: #e950d7;
+  font-weight: 900;
+  text-decoration: none;
+  border: 0;
+}
+
+.often-questions .accordion-heading.active + .accordion-block {
+  display: block;
+}
+
 .often-questions .accordion-block {
-  margin-top: 1rem;
   background-color: #f7e7e6;
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: all 0.3s ease-out;
+}
+.often-questions .accordion-block.active-content {
+  overflow: visible;
+  opacity: 1;
+  margin-top: 1rem;
   padding: 3rem 4rem;
+  z-index: 2;
 }
 .often-questions .accordion-block:before {
   content: '';
@@ -1259,6 +1278,23 @@ h4 {
   border-radius: 4px;
   transform: translateX(-50%) !important;
   padding: 3rem 6rem 4rem 6rem;
+}
+.status {
+  text-align: center;
+}
+
+.pageup {
+  opacity: 0;
+  width: 26px;
+  height: 26px;
+  position: fixed;
+  bottom: 100px;
+  right: 5%;
+  z-index: 30;
+  background-color: #fff;
+  cursor: pointer;
+  border: 1px solid white;
+  transition: 1s all;
 }
 @media (max-width: 1399px) {
   .paints {
